# 3dgrut-visualization

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_visualization.ps1  build_visualization.sh  formatter.sh  pyproject.toml
.github/workflows/: ci.yaml
gaussian_viewer/: __init__.py  _launchers.py  gl_interop.py  polyscope_viewer.py
src/: CMakeLists.txt  commandline_viewer.cpp  gaussian_common.h  gl_interop.h  interactive_viewer.cpp  python_bindings.cpp  renderer_core.cpp  renderer_core.h
src/glad/include/KHR/: khrplatform.h
src/glad/include/glad/: gl.h
