[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "gaussian-viewer"
version = "0.1.0"
description = "3D Gaussian Splat viewer with ANARI/VisRTX renderer and Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Qi Wu", email = "wilson.over.cloud@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["numpy", "polyscope>=2.6.0", "black==26.3.1", "isort==5.13.0"]

[project.scripts]
polyscope-viewer = "gaussian_viewer.polyscope_viewer:main"
gaussian-viewer = "gaussian_viewer._launchers:gaussian_viewer"
interactive-viewer = "gaussian_viewer._launchers:interactive_viewer"

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"
wheel.packages = ["gaussian_viewer"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_HELIDE = "OFF"
BUILD_VISRTX = "ON"
BUILD_VISGL = "OFF"
ANARI_VERSION = "v0.15.0"
VISRTX_VERSION = "v0.13.0"
OPTIX_VERSION = "9.0"
